<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardTap</string>
    <string name="domain"><![CDATA[http://ec2-54-248-31-162.ap-northeast-1.compute.amazonaws.com/]]></string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="title_activity_tab">TabHolder</string>
    <string name="my_card">My Card</string>
    <string name="card_share">Card Share</string>
    <string name="profile">Profile</string>
    <string name="heart">heart</string>
    <string name="profile_image">Profile Image</string>
    <color name="bg">#ccccee</color>
    <string name="to_email">abc@email.com</string>
    <string name="save">Save</string>
    <string name="join">Join</string>
    <string name="email">email</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="share">Share</string>
    <string name="_0">0</string>
    <string name="logout">Logout</string>

</resources>