<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TabActivity" >

    <View
        android:id="@+id/view1"
        android:layout_width="280dp"
        android:layout_height="360dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="6dp"
        android:background="@color/bg" />

    <ImageView
        android:id="@+id/like_bullet"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/heart"
        android:src="@drawable/mycard_favorite" />

    <TextView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/like_bullet"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@+id/like_bullet"
        android:text="@string/_0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/like_bullet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/moon" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_marginTop="27dp"
        android:layout_toRightOf="@+id/like_bullet" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:padding="3dp"
                android:text="E" />

            <TextView
                android:id="@+id/email"
                android:padding="3dp"
                android:text="srom.moon@gmail.com" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:padding="3dp"
                android:text="W" />

            <TextView
                android:id="@+id/web"
                android:padding="3dp"
                android:text="cardtap.com" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:padding="3dp"
                android:text="T" />

            <TextView
                android:id="@+id/twitter"
                android:padding="3dp"
                android:text="twitter.com/cardtap" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:padding="3dp"
                android:text="F" />

            <TextView
                android:id="@+id/facebook"
                android:padding="3dp"
                android:text="facebook.com/cardtap" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/to_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_below="@+id/view1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/to_email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/to_email"
        android:layout_alignRight="@+id/to_email"
        android:layout_below="@+id/to_email"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:text="moon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/message"
        android:layout_alignTop="@+id/to_email"
        android:layout_toRightOf="@+id/profile_image"
        android:text="@string/share" />

</RelativeLayout>